--- a/templates/form1.html
+++ b/templates/form1.html
@@ -6,7 +6,7 @@
     <title>Natural Burial</title>
 
     <!--Link to css file-->
-    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../static/css/main1.css">
 </head>
 <body>
 
