--- a/Natural Burial/FastFood/FastFood.css
+++ b/Natural Burial/FastFood/FastFood.css
@@ -69,8 +69,9 @@ Designed by: Aakarshan Khosla
 /* -----------------------CSS for input--------------------- */
 .text-input{
     border-radius: 10px;
-    border: 5px solid ;
-    margin-bottom: 10px;
+    border: 4px solid ;
+    font-size: 72px;
+    width: 50%;
 }
 /*------------------------------------------------------------------------*/
 /*------------------------------------------------------------------------*/
