--- a/Natural Burial/FastFood/FastFood.css
+++ b/Natural Burial/FastFood/FastFood.css
@@ -53,7 +53,7 @@ Designed by: Aakarshan Khosla
     background-color: white;
 }
 
-.card-text .btn-select{
+.btn-select{
     width: 80%;
     border-radius: 10px;
     border: none;
@@ -61,6 +61,10 @@ Designed by: Aakarshan Khosla
     font-size: 72px;
 }
 
+.btn-select:hover, .play-audio:hover{
+    background-color: lightgrey;
+    cursor: pointer;
+}
 /*------------------------------------------------------------------------*/
 /*------------------------------------------------------------------------*/
 
