--- a/Natural Burial/FastFood/FastFood.css
+++ b/Natural Burial/FastFood/FastFood.css
@@ -65,6 +65,12 @@ Designed by: Aakarshan Khosla
     background-color: lightgrey;
     cursor: pointer;
 }
+
+.big-card.selected {
+    .card-img{
+        border: 4px solid rgb(0, 0, 255);
+    }
+}
 /*------------------------------------------------------------------------*/
 /*------------------------------------------------------------------------*/
 
