--- a/Natural Burial/FastFood/FastFood.css
+++ b/Natural Burial/FastFood/FastFood.css
@@ -69,7 +69,7 @@ Designed by: Aakarshan Khosla
 .big-card.selected {
     .card-img{
         transition: border .15s ;
-        border: 4px solid rgb(0, 0, 255);
+        border: 6px solid rgb(0, 0, 255);
     }
 }
 /*------------------------------------------------------------------------*/
@@ -114,7 +114,7 @@ Designed by: Aakarshan Khosla
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #fff;
+    background-color: #ffffff;
     border: 1px solid #ccc;
     border-top: none;
     border-radius: 0 0 4px 4px;
