Revert "updated documentation"
This reverts commit d972c75caede7e1942794e8cf5069e0ab7c183ab.

--- a/Natural Burial/FastFood/FastFood.css
+++ b/Natural Burial/FastFood/FastFood.css
@@ -1,6 +1,6 @@
 /* 
-FastFood CSS framework
-This custom CSS framework was created for our group project to enhance code readability
+FastFood CSS library 
+This custom CSS library was created for our group project to enhance code readability
 and streamline styling processes in web development. This library
 aims to simplify the styling process and offer a set of pre-defined styles for common
 web elements.
