--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -27,11 +27,11 @@
                     <select class="block appearance-none text-center 
                     bg-white border-2 border-[#0000FF] hover:border-[#000000] 
                     px-4 py-2 pr-4 rounded" required>
-                        <option hidden selected disabled>Select</option>
-                        <option>Casket</option>
-                        <option>Burial Shroud</option>
-                        <option>Cremation Urn</option>
-                        <option>Vault</option>
+                        <option value="" selected disabled hidden>Select</option>
+                        <option value="Casket">Casket</option>
+                        <option value="Burial Shroud">Burial Shroud</option>
+                        <option value="Cremation Urn">Cremation Urn</option>
+                        <option value="Vault">Vault</option>
                     </select>
                 </div>
             </div>
