--- a/Natural Burial/templates/phase1.html
+++ b/Natural Burial/templates/phase1.html
@@ -6,7 +6,7 @@
     <title>Natural Burial</title>
 
     <!--Link to CSS files-->
-    <link rel="stylesheet" href="../FastFood/FastFood.css">
+    <link rel="stylesheet" href="../../FastFood-1.0/FastFood.css">
     <link rel="stylesheet" href="../static/css/phase1.css">
 </head>
 <body>
@@ -113,6 +113,6 @@
 
 
     <!--Link to JavaScript files-->
-    <script src="../FastFood/FastFood.js"></script>
+    <script src="../../FastFood-1.0/FastFood.js"></script>
 </body>
 </html>
