added inscription input

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -58,6 +58,11 @@
                 </div>
             </div>
             
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-5 text-center mb-5">
+                <label class="mr-2" for="inscription">Favourite Quote: </label>
+                <input type="text" id="inscription" autocomplete="off" required>
+            </div>
+
             <div>
                 <button class="bg-white border-2 border-[#000000] 
                 rounded p-1 hover:bg-[#f5f5dc]" type="submit">
