--- a/Natural Burial/static/css/index.css
+++ b/Natural Burial/static/css/index.css
@@ -3,16 +3,16 @@
     of the form, keeping in mind the preferences of our client
 */
 
-*{
+* {
     font-size: 3rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-body{
+body {
     background-color: rgb(179, 212, 152);
 }
 
-#form-box{
+#form-box {
     width: 95%;
     border: 1px solid;
     margin-left: auto;
@@ -20,30 +20,55 @@ body{
     background-color: antiquewhite;
 }
 
-input{
+input {
     border: 2px solid blue;
     border-radius: 4px;
 }
 
-input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
 }
 
-input[type="radio"]{
+input[type="radio"] {
     border: 0px;
     height: 100px;
 }
 
-select{
+select {
     width: 100%;
 }
 
-option{
+option {
     font-size: 7px;
 }
 
-#image{
-    height: 100%;
-    width: 20rem;
+p {
+    font-size: 1rem;
+}
+
+.card {
+    height: 17.5rem;
+    width: 14 rem;
+}
+
+/* #image {
+    height: 60%;
+    width: 90%;
+} */
+
+.image {
+    height: 67%;
+    width: 100%;
+}
+
+input[type="radio"] {
+
+    height: 70px;
+    width: 50px;
+}
+
+.radio-button {
+    display: flex;
+    justify-content: center;
 }
