--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -11,81 +11,90 @@
 
     <!--Link to CSS files-->
     <link rel="stylesheet" href="../static/css/index.css">
+
+    <!-- CDN link to font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 </head>
 
 <body>
-    <form action="">
-        <div class="flex items-center flex-col gap-4 mt-2 mb-2 p-4 rounded" id="form-box">
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-5 text-center">
-                <label for="name">Name</label>
-                <input type="text" id="name" autocomplete="off" required>
 
-                <label for="phoneNum">Phone Number</label>
-                <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" required>
-
-                <label for="dropdown">Choose Container</label>
-                <div class="relative inline-block mt-auto mb-auto" id="dropdown">
-                    <select class="block appearance-none text-center 
-                    bg-white border-2 border-[#0000FF] hover:border-[#000000] 
-                    px-4 py-2 pr-4 rounded" required>
-                        <option value="" selected disabled hidden>Select</option>
-                        <option value="Casket">Casket</option>
-                        <option value="Burial Shroud">Burial Shroud</option>
-                        <option value="Cremation Urn">Cremation Urn</option>
-                        <option value="Vault">Vault</option>
-                    </select>
-                </div>
-            </div>
-
-            <div>Marker Options:</div>
-            <!-- Marker Options-sadikshya -->
-            <div class="flex flex-row justify-center flex-wrap mt-2 mb-2 p-4 rounded">
-                <div class="card m-4 border-2 border-black p-1 rounded">
-                    <img class="image rounded" src="/Natural Burial/static/images/stone.jpeg" alt="Wooden Cross">
-                    <p class="mb-2">bdhjfbjherbgkejrn</p>
-                    <div class="radio-button">
-                        <input type="radio" name="options" value="flat marker" required>
-                    </div>
-                </div>
-
-                <div class="card m-4 border-2 border-black p-1 rounded">
-                    <img class="image rounded" src="/Natural Burial/static/images/stone.jpeg" alt="Stone Engraved">
-                    <p class="mb-2">bdhjfbjherbgkejrn</p>
-                    <div class="radio-button">
-                        <input type="radio" name="options" value="natural marker" required>
-                    </div>
-                </div>
-
-                <div class="card m-4 border-2 border-black p-1 rounded">
-                    <img class="image rounded" src="/Natural Burial/static/images/stone.jpeg" alt="Memorial Plaque">
-                    <p class="mb-2">bdhjfbjherbgkejrn</p>
-                    <div class="radio-button">
-                        <input type="radio" name="options" value="Plaque marker" required>
-                    </div>
-                </div>
-
-                <div class="card m-4 border-2 border-black p-1 rounded">
-                    <img class="image rounded" src="/Natural Burial/static/images/stone.jpeg"
-                        alt="Memorial Plaque on tree">
-                    <p class="mb-2">ytdthgfvjhgujh</p>
-                    <div class="radio-button">
-                        <input type="radio" name="options" value="option1" required>
-                    </div>
-
-                    <!-- <input type="radio" class="radio-button" name="options" value="engarved marker" required> -->
-                </div>
-            </div>
-
+    <div>Marker Options:</div>
+    <!-- Marker Options-sadikshya -->
+    <div class="flex flex-row justify-center flex-wrap mt-2 mb-2 p-4 rounded">
+        <div class="card m-4 border-2 border-black p-1 rounded">
             <div>
-                <button class="bg-white border-2 border-[#000000] 
-                rounded p-1 hover:bg-[#f5f5dc]" type="submit">
-                    SUBMIT
-                </button>
+                <img class="image rounded w-54 h-44" src="/Natural Burial/static/images/woodenmemorialcross.jpg"
+                    alt="Wooden Cross">
+            </div>
+
+            <!-- <p class="mb-2 justify-center items-center">
+                        This is a wooden cross used for memorial purposes.
+                        <i class="fa-solid fa-microphone microphone" class="bar"></i>
+                    </p> -->
+            <div class="container">
+                <p class="mb-2 justify-center items-center">
+                    This is a wooden cross used for memorial purposes.
+                </p>
+
+            </div>
+            <!-- <div class="radio-button">
+                        <input type="radio" name="options" value="flat marker" required>
+                        <div class="mic-container">
+                            <i class="fa-solid fa-microphone microphone"></i>
+                        </div>
+                    </div> -->
+            <div class="radio h-8">
+                <input type="radio" name="burial-option-selected">
+                <i class="fa-solid fa-microphone microphone"></i>
+            </div>
+
+        </div>
+
+        <div class="card m-4 border-2 border-black p-1 rounded">
+            <div>
+                <img class="image rounded w-54 h-44" src="/Natural Burial/static/images/stonemarker.jpeg"
+                    alt="Stone Engraved">
+            </div>
+            <p class="mb-2">
+                This is engraved stone marker for natural burial.
+            </p>
+
+            <div class="radio-button">
+                <input type="radio" name="options" value="natural marker" required>
             </div>
         </div>
 
-    </form>
-</body>
+        <div class="card m-4 border-2 border-black p-1 rounded">
+            <div>
+                <img class="image rounded h-44" src="/Natural Burial/static/images/woodenplaque.jpeg"
+                    alt="Wooden Memorial Plaque">
+            </div>
+            <p class="mb-2">This is a standing wooden plaque for natural burial identification.
+            </p>
+            <div class="mic-container">
+                <i class="fa-solid fa-microphone microphone"></i>
+            </div>
+            <div class="radio-button">
+                <input type="radio" name="options" value="Plaque marker" required>
+            </div>
+        </div>
 
-</html>
+        <div class="card m-4 border-2 border-black p-1 rounded">
+            <div>
+                <img class="image  w-54 h-44 rounded" src="/Natural Burial/static/images/treemarker.jpeg"
+                    alt="Memorial Plaque on tree">
+            </div>
+            <p class="mb-2">This is a wooden board pinned at tree for identification. </p>
+            <div class="radio-button">
+                <input type="radio" name="options" value="option1" required>
+            </div>
+        </div>
+    </div>
+
+
+</body>
