--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -12,65 +12,13 @@
     <link rel="stylesheet" href="../static/css/index.css">
 </head>
 <body>
-    <form action="">
-        <div class="flex items-center flex-col gap-4 mt-2 mb-2 p-4 rounded" id="form-box">
-
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-5 text-center">
-                <label for="name">Name</label>
-                <input type="text" id="name" autocomplete="off" required>
-
-                <label for="phoneNum">Phone Number</label>
-                <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" required>
-
-                <label for="dropdown">Choose Container</label>
-                <div class="relative inline-block mt-auto mb-auto" id="dropdown">
-                    <select class="block appearance-none text-center 
-                    bg-white border-2 border-[#0000FF] hover:border-[#000000] 
-                    px-4 py-2 pr-4 rounded" required>
-                        <option value="" selected disabled hidden>Select</option>
-                        <option value="Casket">Casket</option>
-                        <option value="Burial Shroud">Burial Shroud</option>
-                        <option value="Cremation Urn">Cremation Urn</option>
-                        <option value="Vault">Vault</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="grid grid-cols-2 mt-5 gap-5 justify-items-stretch w">
-                <div class="col-span-2 justify-self-center">Marker Options</div>
-            
-                <div class="flex flex-col justify-self-center">
-                    <img id="image" src="../static/images/flat marker.jpg" alt="flat marker">
-                    <input class="mt-2" type="radio" name="options" value="flat marker" required>
-                </div>
-                <div class="flex flex-col justify-self-center">
-                    <img id="image" src="../static/images/natural marker.jpg" alt="natural marker">
-                    <input class="mt-2" type="radio" name="options" value="natural marker" required>
-                </div>
-            
-                <div class="flex flex-col justify-self-center">
-                    <img id="image" src="../static/images/tree marker.jpg" alt="tree marker">
-                    <input class="mt-2" type="radio" name="options" value="tree marker" required>
-                </div>
-                <div class="flex flex-col justify-self-center">
-                    <img id="image" src="../static/images/upright monument.jpg" alt="upright monument">
-                    <input class="mt-2" type="radio" name="options" value="upright monument" required>
-                </div>
-            </div>
-            
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-5 text-center mb-5">
-                <label class="mr-2" for="inscription">Favourite Quote: </label>
-                <input type="text" id="inscription" autocomplete="off" required>
-            </div>
-
-            <div>
-                <button class="bg-white border-2 border-[#000000] 
-                rounded p-1 hover:bg-[#f5f5dc]" type="submit">
-                    SUBMIT
-                </button>
-            </div>
-        </div>
-
-    </form>
+    <!--Inscription/ Favourite Quote [Aakarshan Khosla]
+        This HTML content contains a field where user can 
+        enter their inscription.
+    -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-5 text-center mb-5">
+        <label class="mr-2" for="inscription">Favourite Quote: </label>
+        <input type="text" id="inscription" autocomplete="off" required>
+    </div>
 </body>
 </html>
