--- a/Natural Burial/static/css/index.css
+++ b/Natural Burial/static/css/index.css
@@ -1,107 +1,27 @@
-/*
-    The purpose of this css file is to style the components
-    of the form, keeping in mind the preferences of our client
-*/
-
 * {
     font-size: 3rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-body {
-    background-color: rgb(179, 212, 152);
-}
+/*
+CSS by Sadikshya Oli
+This CSS defines the stly for marker options
+*/
 
-#form-box {
-    width: 95%;
-    border: 1px solid;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: antiquewhite;
-}
-
-input {
-    border: 2px solid blue;
-    border-radius: 4px;
-}
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-}
-
+/* Style for radio buttons */
 input[type="radio"] {
-    border: 0px;
-    height: 100px;
-}
-
-select {
-    width: 100%;
-}
-
-option {
-    font-size: 7px;
-}
-
-p {
-    font-size: 1rem;
-}
-
-.card {
-    height: 17.5rem;
-    width: 14rem;
-
-}
-
-/* #image {
-    height: 60%;
-    width: 90%;
-} */
-
-.image {
-    height: 67%;
-    width: 100%;
-}
-
-input[type="radio"] {
-
     height: 70px;
     width: 50px;
 }
 
-.radio-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* margin-bottom: 2; */
+/* Style for icons */
+.icon {
+    width: 2rem;
+    line-height: 1rem;
 }
 
-.microphone {
-    font-size: 1.5rem;
-    margin-bottom: 0.2rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-/*  the radio input field by four times */
-/* .radio>input[type="radio"] {
-    transform: scale(4);
-
-} */
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-}
-
-.mic-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+/* Style for radio buttons within elements with class 'radio' */
+.radio input[type="radio"] {
+    height: 80%;
+    width: 1.5rem;
 }
