code review and changes

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -23,9 +23,9 @@
         This HTML content conatins four cards containing information regardingfor burial options -->
     <div class="heading text-center"> Marker Options </div>
 
-    <div class="flex flex-row justify-center flex-wrap mb-2 p-4 rounded">
+    <div class="flex flex-row justify-center flex-wrap mb-2 p-4 rounded gap-5">
         <!--This card contains wooden memorial cross as marker option -->
-        <div class="card m-4 h-[18rem] w-[14rem] border-2 border-black p-1 rounded">
+        <div class="card m-4 h-[22rem] w-[18rem] border-2 border-black p-1 rounded flex flex-col justify-between">
             <div class="image">
                 <img class="rounded w-full h-44" src="/Natural Burial/static/images/woodenmemorialcross.jpg"
                     alt="Wooden Cross">
@@ -44,7 +44,7 @@
             </div>
         </div>
         <!--This card contains Stone Engraved as marker option -->
-        <div class="card h-[18rem] w-[14rem] m-4 border-2 border-black p-1 rounded">
+        <div class="card h-[22rem] w-[18rem] m-4 border-2 border-black p-1 rounded flex flex-col justify-between">
             <div>
                 <img class="image rounded w-full h-44" src="/Natural Burial/static/images/stonemarker.jpeg"
                     alt="Stone Engraved">
@@ -63,7 +63,7 @@
 
         </div>
         <!--This card contains wooden memorial plaque as marker option -->
-        <div class="card h-[18rem] w-[14rem] m-4 border-2 border-black p-1 rounded">
+        <div class="card h-[22rem] w-[18rem] m-4 border-2 border-black p-1 rounded flex flex-col justify-between">
             <div>
                 <img class="image rounded w-full h-44" src="/Natural Burial/static/images/woodenplaque.jpeg"
                     alt="Wooden Memorial Plaque">
@@ -82,7 +82,7 @@
 
         </div>
         <!--This card contains memorial plaque on tree as marker option -->
-        <div class="card h-[18rem] w-[14rem] m-4 border-2 border-black p-1 rounded">
+        <div class="card h-[22rem] w-[18rem] m-4 border-2 border-black p-1 rounded flex flex-col justify-between">
             <div>
                 <img class="image w-full h-44 rounded" src="/Natural Burial/static/images/treemarker.jpeg"
                     alt="Memorial Plaque on tree">
