--- a/Natural Burial/static/css/index.css
+++ b/Natural Burial/static/css/index.css
@@ -1,5 +1,5 @@
 * {
-    font-size: 3rem;
+    font-size: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -14,8 +14,12 @@ This CSS defines the stly for marker options
     line-height: 1rem;
 }
 
+.text-base{
+    font-size: 1.5rem!important;
+}
+
 /* Style for radio buttons within elements with class 'radio' */
 .radio input[type="radio"] {
     height: 80%;
-    width: 1.5rem;
+    width: 2rem;
 }
