--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -19,16 +19,18 @@
 </head>
 
 <body>
-    <!-- Marker Options [Sadikshya Oli] 
-        This HTML content conatins four cards containing information regardingfor burial options -->
+    <!-- 
+        Marker Options [Sadikshya Oli]
+        This HTML content contains four cards containing information regardingfor burial options
+    -->
     <div class="heading text-center"> Marker Options </div>
 
-    <div class="flex flex-row justify-center flex-wrap mb-2 p-4 rounded gap-5">
+    <div class="marker-option flex flex-row justify-center flex-wrap mb-2 p-4 rounded gap-5">
         <!--This card contains wooden memorial cross as marker option -->
         <div class="card m-4 h-[22rem] w-[18rem] border-2 border-black p-1 rounded flex flex-col justify-between">
             <div class="image">
                 <img class="rounded w-full h-44" src="/Natural Burial/static/images/woodenmemorialcross.jpg"
-                    alt="Wooden Cross">
+                    alt="This is a wooden cross used for memorial purposes.">
             </div>
             <div class="container flex justify-between items-center">
                 <p class="text-base">
@@ -47,7 +49,7 @@
         <div class="card h-[22rem] w-[18rem] m-4 border-2 border-black p-1 rounded flex flex-col justify-between">
             <div>
                 <img class="image rounded w-full h-44" src="/Natural Burial/static/images/stonemarker.jpeg"
-                    alt="Stone Engraved">
+                    alt="This is engraved stone marker for natural burial.">
             </div>
             <div class="container flex justify-between items-center">
                 <p class="text-base">
@@ -66,7 +68,7 @@
         <div class="card h-[22rem] w-[18rem] m-4 border-2 border-black p-1 rounded flex flex-col justify-between">
             <div>
                 <img class="image rounded w-full h-44" src="/Natural Burial/static/images/woodenplaque.jpeg"
-                    alt="Wooden Memorial Plaque">
+                    alt="This is a standing wooden plaque for natural burial.">
             </div>
             <div class="container flex justify-between items-center">
                 <p class="text-base">This is a standing wooden plaque for natural burial.
@@ -85,7 +87,7 @@
         <div class="card h-[22rem] w-[18rem] m-4 border-2 border-black p-1 rounded flex flex-col justify-between">
             <div>
                 <img class="image w-full h-44 rounded" src="/Natural Burial/static/images/treemarker.jpeg"
-                    alt="Memorial Plaque on tree">
+                    alt="This is a wooden board pinned at tree for identification.">
             </div>
             <div class="container flex justify-between items-center">
                 <p class="text-base">This is a wooden board pinned at tree for identification. </p>
@@ -100,6 +102,4 @@
 
         </div>
     </div>
-
-
 </body>
