added general info

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -19,8 +19,18 @@
 </head>
 
 <body>
-    <div class="form-box rounded">
+    <div class="form-box rounded mt-3">
         <form action="">
+            <div class="general-info grid grid-cols-1 md:grid-cols-2 gap-5 text-center">
+                <label for="name">Name</label>
+                <input type="text" id="name" autocomplete="off" required>
+
+                <label for="phoneNum">Phone Number</label>
+                <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" required>    
+            </div>
+
+            <br>
+
             <!-- 
                 Marker Options [Sadikshya Oli]
                 This HTML content contains four cards containing information regardingfor burial options
