--- a/Natural Burial/static/css/index.css
+++ b/Natural Burial/static/css/index.css
@@ -1,5 +1,5 @@
 * {
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -14,6 +14,22 @@ body{
     margin-right: auto;
 
     background-color: antiquewhite;
+    padding: 2%;
+}
+
+input{
+    border: 2px solid blue;
+    border-radius: 4px;
+}
+
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
+
+input[type="radio"]{
+    border: 0px;
+    height: 100px;
 }
 
 /*
